--- a/src/SmartPOS.Products.Api/SmartPOS.Products.Api.csproj
+++ b/src/SmartPOS.Products.Api/SmartPOS.Products.Api.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +22,11 @@
   <ItemGroup>
     <ProjectReference Include="..\SmartPOS.Products.Application\SmartPOS.Products.Application.csproj" />
     <ProjectReference Include="..\SmartPOS.Products.Infrastructure\SmartPOS.Products.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\Categories\" />
+    <Folder Include="Controllers\Taxes\" />
   </ItemGroup>
 
 </Project>
