--- a/src/SmartPOS.Products.Domain/SmartPOS.Products.Domain.csproj
+++ b/src/SmartPOS.Products.Domain/SmartPOS.Products.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.SmartEnum" Version="7.0.0" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
   </ItemGroup>
 
 </Project>
