--- a/src/SmartPOS.Products.Application/SmartPOS.Products.Application.csproj
+++ b/src/SmartPOS.Products.Application/SmartPOS.Products.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\SmartPOS.Products.Domain\SmartPOS.Products.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Products\GetAll\" />
+  </ItemGroup>
+
 </Project>
